--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -21,7 +21,8 @@
 }
 
 .link:link, .link:visited {
-    padding: 0.5em, 0.75em;
+    margin: 1em;
+    padding: 0.75em, 0.75em;
     text-decoration: none;
 }
 
