user now able to edit a song, which uses jquery to reveal a form for user to update and save song details

--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -14,23 +14,48 @@
                 <h2 th:text="${artist.artistName}"></h2>
                 <div class="row">
                     <div class="each-song" th:each="song : ${artist.songs}">
-                        <h3 th:text="${song.songTitle}"></h3>
-                        <p th:text="${song.songGenre}"></p>
-                        <a th:href="${song.linkToSong}" target="_blank"><img th:src="${song.imgSongURL}" class="image"></a>
-                        <p class="link"><a th:href="${song.linkToSong}" target="_blank">Play Song</a></p>
-
-                        <!-- delete song -->
-                        <form method="POST" action="/song/delete">
-                            <input type="hidden" th:value="${song.id}" name="songId">
-                            <input type="hidden" th:value="${artist.id}" name="artistId">
-                            <input type="submit" value="Delete Song">
-                        </form>
-                        <!-- edit song -->
+                        <!-- show song and update song -->
                         <form method="POST" action="/song/edit">
-                            <input type="hidden" th:value="${song.id}" name="songId">
+                            <!-- song title -->
+                            <h3 class="text-to-hide" th:text="${song.songTitle}"></h3>
+                            <div class="form-group">
+                                <input class="form-to-show form-control" hidden name="newSongTitle" th:value="${song.songTitle}">
+                            </div>
+
+                            <!-- SAMPLE CODE TO DELETE ---- for styling form
+                            <label for="input-song-title">Song Title</label>
+                            <input type="text"
+                                   class="form-control"
+                                   placeholder="Enter Song Title"
+                                   name="songTitle"
+                                   id="input-song-title">
+                            -->
+
+                            <!-- songGenre -->
+                            <p class="text-to-hide" th:text="${song.songGenre}"></p>
+                            <input class="form-to-show" hidden name="newSongGenre" th:value="${song.songGenre}">
+                            <!-- URL to picture -->
+                            <a class="text-to-hide" th:href="${song.imgSongURL}" target="_blank"><img th:src="${song.imgSongURL}" class="image"></a>
+                            <input class="form-to-show" hidden name="newImgSongURL" th:value="${song.imgSongURL}">
+                            <!-- URL to song -->
+                            <p class="link"><a th:href="${song.linkToSong}" target="_blank">Play Song</a></p>
+                            <input class="form-to-show" hidden name="newLinkToSong" th:value="${song.linkToSong}">
+                            <!-- artist and song ids -->
+                            <input hidden th:value="${song.id}" name="songId">
                             <input type="hidden" th:value="${artist.id}" name="artistId">
-                            <input type="submit" value="Update Song">
+                            <!-- submit / save -->
+                            <input class="form-to-show" type="submit" hidden value="Save Changes">
                         </form>
+                        <!-- delete song -->
+                        <div class="row">
+                            <form method="POST" action="/song/delete">
+                                <input type="hidden" th:value="${song.id}" name="songId">
+                                <input type="hidden" th:value="${artist.id}" name="artistId">
+                                <input type="submit" value="Delete">
+                            </form>
+                        </div>
+                            <!-- edit song -->
+                            <button class="edit-button text-to-hide">Edit</button>
                     </div>
                 </div>
             </div> <!-- /col-8 -->
@@ -75,5 +100,6 @@
             </div>
         </div> <!-- /row -->
     </div> <!-- /container -->
+    <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
