created a cloudfront distribution for the s3 bucket holding the about me static page, and added domainname as the url as a link in the nav bar to musiccentral.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,14 +23,15 @@
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <div class="row justify-content-start">
-                        <div class="col-4">
+                        <div class="col-12">
                             <a href="/login">Login</a>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12">
                             <a href="/signup">Signup</a>
                         </div>
-                        <div class="col-4">
-                            <a href="http://sharinastubbs.s3-website-us-west-2.amazonaws.com/">About the Developer</a>
+                        <div class="col-12">
+                            <a href="http://d3evmka24wwdik.cloudfront.net/sharina.html">About the Developer</a>
+<!--                            <a href="http://sharinastubbs.s3-website-us-west-2.amazonaws.com/">About the Developer</a>-->
                         </div>
                     </div>
                     <p>MusicCentral is your personal music reference site. It's your creation, that you can fill with your favorite artists, your favorite songs, and the location from which you like to play those songs. This site plays very well with YouTube - once you add the link to your song on YouTube, you simply slick on that song, and YouTube opens up and plays that song. This site is perfect for those who love music, but who are terrible at remember what their favorite song is called, and who that favorite artist is.</p>
