--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,27 +19,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">Music Central makes it easy to keep track of and play your favorite songs</h1>
+                    <h1 class="mb-5">MusicCentral makes it easy to keep track of and play your favorite songs</h1>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                    <div class="row justify-content-start">
-                        <div class="col-12">
+                    <div class="row justify-content-md-center">
+                        <div class="col-2 link-button">
                             <a href="/login">Login</a>
                         </div>
-                        <div class="col-12">
+                        <div class="col-2 link-button">
                             <a href="/signup">Signup</a>
                         </div>
-                        <div class="col-12">
-                            <a href="http://d3evmka24wwdik.cloudfront.net/sharina.html">About the Developer</a>
-<!--                            <a href="http://sharinastubbs.s3-website-us-west-2.amazonaws.com/">About the Developer</a>-->
-                        </div>
                     </div>
-                    <p>MusicCentral is your personal music reference site. It's your creation, that you can fill with your favorite artists, your favorite songs, and the location from which you like to play those songs. This site plays very well with YouTube - once you add the link to your song on YouTube, you simply slick on that song, and YouTube opens up and plays that song. This site is perfect for those who love music, but who are terrible at remember what their favorite song is called, and who that favorite artist is.</p>
-                    <h3>We are under construction! The site is functional, however, and ready to be used.</h3>
                 </div>
             </div>
         </div>
     </header>
+    <p>MusicCentral is your personal music reference site. It's your creation, that you can fill with your favorite artists, your favorite songs, and the location from which you like to play those songs. This site plays very well with YouTube - once you add the link to your song on YouTube, you simply slick on that song, and YouTube opens up and plays that song. This site is perfect for those who love music, but who are terrible at remember what their favorite song is called, and who that favorite artist is.</p>
+    <h3>We are under construction! The site is functional, however, and ready to be used.</h3>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
